--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<center>   <img src=\"https://pa1.narvii.com/6437/e490081cae3ef1c0e1c77936346013e7d93e568e_hq.gif\"></img> </center>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./src/tests/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,6 @@
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.16"
-  }
+  },
+  "type": "module"
 }
