--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<center>   <img src=\"https://pa1.narvii.com/6437/e490081cae3ef1c0e1c77936346013e7d93e568e_hq.gif\"></img> </center>",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "test": "mocha ./src/tests/**/*.test.js"
   },
